IntelliJ code formatting